styles/globals.css
/* ... */
.closing-gauge__left:after {
  position: absolute;
  right: -0.5rem;
  display: block;
  width: 0;
  height: 0;
  border-top: 0.25rem solid transparent;
  border-bottom: 0.25rem solid transparent;
  border-left: 0.5rem solid var(--color-dark-background);
  content: " ";
}

.closing-gauge__right {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 0 0 0 0.75rem;
}

.closing-gauge__number {
  color: var(--color-dark-gray);
  font-size: 1.5rem;
  font-weight: 400;
}

.closing-gauge__desc {
  color: var(--color-dark-gray);
  font-size: 1.5rem;
  font-weight: 300;
}

.banner {
  position: relative;
  display: flex;
  overflow: hidden;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
  margin: 1rem;
  background-color: var(--color-light-gray);
}

.banner__background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  object-fit: cover;
  opacity: 0.2;
  pointer-events: none;
}

.banner-top .banner__left {
  flex-basis: 40%;
  padding-right: 1rem;
}

.banner-top .banner__left > .banner__hairline {
  color: var(--color-dark-gray);
  font-size: 1.25rem;
  font-weight: 300;
  letter-spacing: -0.07rem;
}

.banner-top .banner__left > .banner__title {
  display: block;
  color: var(--color-dark-gray);
  font-size: 2rem;
  font-weight: 700;
  letter-spacing: -0.05rem;
}

.banner-top .banner__right {
  flex-basis: 60%;
}

.banner-top .banner__text {
  margin: 0;
  color: var(--color-dark-gray);
  font-size: 1.25rem;
  font-weight: 300;
  letter-spacing: -0.05rem;
}

.banner-bottom {
  flex-direction: column;
  padding: 1rem 3rem;
  margin-top: 2rem;
}

.banner-bottom .banner__heading {
  position: relative;
  margin: 0 0 1rem;
  color: var(--color-dark-gray);
  font-size: 2rem;
  font-weight: 400;
  text-align: center;
}

.banner-bottom .banner__right {
  width: 100%;
}

.banner-bottom .banner__cta {
  position: relative;
  display: block;
  width: 100%;
  padding: 1rem 0;
  border: 2px solid var(--color-darker-background);
  background: transparent;
  color: var(--color-darker-gray);
  font-size: 1.5rem;
}

main[role="main"] {
  padding: 0 1rem;
  margin-top: 2rem;
}

main h2,
main h3,
main h4 {
  color: var(--color-dark-gray);
  font-weight: 300;
}

main h2 {
  margin: 0 0 2rem;
  font-size: 2rem;
}

.footer {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  margin: 0 1rem 3rem;
}

.footer__links li {
  padding: 0.5rem 0;
  font-size: 1.25rem;
}

.footer__links li a {
  color: var(--color-dark-gray);
  text-decoration: none;
}

.footer__links li a:hover {
  color: var(--color-darker-gray);
  text-decoration: underline;
}

.footer__social > span {
  color: var(--color-darker-gray);
  font-size: 1.25rem;
  text-align: right;
}

.footer__social > ul {
  display: flex;
  margin-top: 1rem;
}

.footer__social > ul > li {
  margin-right: 1rem;
}

.featured-card__more-info {
  display: none;
}

.featured-card__more-info-icon {
  width: 1.5rem;
  height: 1rem;
  margin-right: 0.5rem;
}

.banner-top .icon-button {
  display: none;
}

.max-centered {
  display: contents;
}

.voting-collection__title {
  font-size: 2rem;
  font-weight: 300;
  color: var(--color-dark-gray);
}

.voting-collection {
  display: flex;
}

.voting-collection--list {
  flex-direction: column;
  gap: 14px;
}

.voting-collection--grid {
  overflow-x: scroll;
  margin-left: -12px;
}

.voting-item--grid {
  padding-left: 12px;
  box-sizing: border-box;
  max-width: 90%;
}

.voting-card {
  display: flex;
  position: relative;
}

.voting-card:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.voting-card--grid {
  flex-direction: column;
}

.voting-card--list:before {
  margin-left: 30px;
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0.0001) 0%,
    #888888 19.79%,
    #666666 50%,
    rgba(51, 51, 51, 0.6) 71.88%
  );
}

.voting-card--grid:before {
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 0.0001) 0%,
    rgba(0, 0, 0, 0.6) 100%
  );
}

.voting-card__container {
  display: flex;
}

.voting-card__container--grid {
  position: absolute;
  bottom: 15%;
  flex-direction: column;
  margin: 0 30px;
  /* top: 50%;
  left: 50%;
  transform: translate(-50%, -50%); */
}

.voting-card__content {
  z-index: 10;
}

.voting-card__content {
  display: flex;
}

.voting-card__status {
  padding: 7px;
  position: absolute;
}

.voting-card__status--grid {
  width: 16px;
  height: 16px;
  bottom: 50%;
  left: 0;
}

.voting-card__status--list {
  top: 0;
  left: 0;
}

.voting-card__info {
  display: flex;
  flex-direction: column;
}

.voting-card__title {
  font-weight: 400;
  margin: 0;
  color: #ffffff;
  padding: 12px 0 6px 0;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

.voting-card__title--grid {
  font-size: 2.5rem;
}

.voting-card__description {
  margin: 0;
  color: #ffffff;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

.voting-card__description--grid {
  font-size: 1.25rem;
}

.voting-card__description--list {
  font-size: 1.25rem;
}

.voting-container {
  z-index: 10;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 17px;
  flex: 1;
}

.voting-container--grid {
  padding-top: 12px;
}

.voting-container--list {
  padding: 8px 14px 0 40px;
}

.voting-container__info {
  font-weight: 700;
  color: #ffffff;
  white-space: nowrap;
}

.voting-container__info--grid {
  font-size: 1rem;
}

.voting-container__info--list {
  font-size: 0.833rem;
}

.voting-actions {
  display: flex;
  gap: 9px;
}

.voting-actions__button {
  border: 0;
  font-size: 0;
  padding: 7px;
}

.voting-actions__button--hidden {
  visibility: hidden;
}

.voting-actions > img {
  width: 24px;
  height: 24px;
}

.voting-actions__button--focus {
  outline: 2px solid #ffffff;
}

.voting-actions__button--positive {
  background-color: rgb(var(--color-green-positive));
}
/* ... */

